Update Bot Control v0.1

--- a/Bot Control v0.1
+++ b/Bot Control v0.1
@@ -67,7 +67,7 @@ local stalkbool = nil
 local Admins = {}
 
 --version of the script
-print("Asu's bot controller VERSION: 0.2.1")
+print("DeathWiS2H's bot controller VERSION: v0.1")
 
 --print cmds in console
 if printcmd then
