--- a/Bot Control v0.1.1
+++ b/Bot Control v0.1.1
@@ -1000,7 +1000,7 @@ local function connectChatListener(playerpower)
         chatmessage("Bot number "..index.."is fixed")
         wait(2)
 
-      adelseif command:sub(1, 7) == "jump" and table.find(bots, displayName) and cmdjump then
+      elseif command:sub(1, 4) == "jump" and table.find(bots, displayName) and cmdjump then
         player.Character.Humanoid:ChangeState(Enum.HumanoidStateType.Jumping)
         wait(2)
 
